--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2xI-yr-O5N">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="tUS-cJ-k4e">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Businesses View Controller-->
@@ -13,14 +14,149 @@
                         <viewControllerLayoutGuide type="bottom" id="VBY-gq-v8E"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="XhR-oz-92f">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="107" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ecj-am-5Xp">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BusinessCell" rowHeight="107" id="sQc-CU-itZ" customClass="BusinessCell" customModule="Yelp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sQc-CU-itZ" id="VGm-j9-fgC">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ylq-ji-6DI">
+                                                    <rect key="frame" x="81" y="31" width="83" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="83" id="VdL-Oa-g9H"/>
+                                                        <constraint firstAttribute="height" constant="15" id="ofi-hA-dLk"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Restaurant Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UDr-sJ-O95">
+                                                    <rect key="frame" x="81" y="8" width="196" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="cbl-Qo-1hd"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <color key="textColor" red="1" green="0.10610913850000001" blue="0.45644865200000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2t-YS-62a">
+                                                    <rect key="frame" x="81" y="73" width="223" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                                    <color key="textColor" red="0.74083036099999999" green="0.1186543187" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Trn-YH-j7r">
+                                                    <rect key="frame" x="81" y="51" width="30.5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.74083036099999999" green="0.1186543187" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Dist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Pt-u3-oVm">
+                                                    <rect key="frame" x="285" y="8" width="27" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.74083036099999999" green="0.1186543187" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="em0-9A-Ur6">
+                                                    <rect key="frame" x="169" y="31" width="46.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.74083036099999999" green="0.1186543187" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m4C-aX-A1f">
+                                                    <rect key="frame" x="8" y="8" width="65" height="65"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="65" id="6si-ea-l1Q"/>
+                                                        <constraint firstAttribute="width" constant="65" id="dih-eV-57E"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dollar" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g00-ZX-6AA">
+                                                    <rect key="frame" x="8" y="77" width="35" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.74083036099999999" green="0.1186543187" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="g00-ZX-6AA" firstAttribute="top" secondItem="m4C-aX-A1f" secondAttribute="bottom" constant="4" id="1KC-26-iY7"/>
+                                                <constraint firstItem="UDr-sJ-O95" firstAttribute="leading" secondItem="m4C-aX-A1f" secondAttribute="trailing" constant="8" id="4h3-dX-txx"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="g2t-YS-62a" secondAttribute="trailing" constant="8" id="Aqn-g7-rwd"/>
+                                                <constraint firstItem="Trn-YH-j7r" firstAttribute="leading" secondItem="m4C-aX-A1f" secondAttribute="trailing" constant="8" id="F3R-O8-NRI"/>
+                                                <constraint firstItem="3Pt-u3-oVm" firstAttribute="top" secondItem="VGm-j9-fgC" secondAttribute="top" constant="8" id="G0X-WG-G6A"/>
+                                                <constraint firstAttribute="trailing" secondItem="3Pt-u3-oVm" secondAttribute="trailing" constant="8" id="H7L-1f-1PY"/>
+                                                <constraint firstItem="m4C-aX-A1f" firstAttribute="top" secondItem="VGm-j9-fgC" secondAttribute="top" constant="8" id="Qnr-kX-9ur"/>
+                                                <constraint firstItem="m4C-aX-A1f" firstAttribute="leading" secondItem="VGm-j9-fgC" secondAttribute="leading" constant="8" id="SJQ-GW-c7r"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="g00-ZX-6AA" secondAttribute="bottom" constant="5" id="Sl8-vo-ZkD"/>
+                                                <constraint firstItem="Ylq-ji-6DI" firstAttribute="leading" secondItem="m4C-aX-A1f" secondAttribute="trailing" constant="8" id="Vpx-0B-jxq"/>
+                                                <constraint firstItem="em0-9A-Ur6" firstAttribute="leading" secondItem="Ylq-ji-6DI" secondAttribute="trailing" constant="5" id="XJ6-am-WDf"/>
+                                                <constraint firstItem="UDr-sJ-O95" firstAttribute="top" secondItem="VGm-j9-fgC" secondAttribute="top" constant="8" id="Yjd-Av-SDh"/>
+                                                <constraint firstItem="g00-ZX-6AA" firstAttribute="leading" secondItem="VGm-j9-fgC" secondAttribute="leading" constant="8" id="cQO-7Y-WrY"/>
+                                                <constraint firstItem="Ylq-ji-6DI" firstAttribute="centerY" secondItem="em0-9A-Ur6" secondAttribute="centerY" id="g5x-zF-HXe"/>
+                                                <constraint firstItem="g2t-YS-62a" firstAttribute="leading" secondItem="m4C-aX-A1f" secondAttribute="trailing" constant="8" id="jXA-EP-Wcu"/>
+                                                <constraint firstItem="Ylq-ji-6DI" firstAttribute="top" secondItem="UDr-sJ-O95" secondAttribute="bottom" constant="5" id="pp4-0h-ffO"/>
+                                                <constraint firstItem="3Pt-u3-oVm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UDr-sJ-O95" secondAttribute="trailing" constant="8" id="qN0-iG-6a9"/>
+                                                <constraint firstItem="g2t-YS-62a" firstAttribute="top" secondItem="Trn-YH-j7r" secondAttribute="bottom" constant="5" id="t6h-8F-i32"/>
+                                                <constraint firstItem="Trn-YH-j7r" firstAttribute="top" secondItem="Ylq-ji-6DI" secondAttribute="bottom" constant="5" id="tS6-J0-Gt3"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="g2t-YS-62a" secondAttribute="bottom" constant="5" id="uCx-g0-bKK"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="addressLabel" destination="g2t-YS-62a" id="xsM-DJ-4Eq"/>
+                                            <outlet property="cuisineLabel" destination="Trn-YH-j7r" id="LYd-Tl-Tu3"/>
+                                            <outlet property="distanceLabel" destination="3Pt-u3-oVm" id="qnI-9m-F6b"/>
+                                            <outlet property="dollarLabel" destination="g00-ZX-6AA" id="LQc-FM-aMd"/>
+                                            <outlet property="nameLabel" destination="UDr-sJ-O95" id="iRX-hv-SPI"/>
+                                            <outlet property="restaurantImageView" destination="m4C-aX-A1f" id="0wG-ny-8zH"/>
+                                            <outlet property="reviewLabel" destination="em0-9A-Ur6" id="CX5-Ub-6ie"/>
+                                            <outlet property="starImageView" destination="Ylq-ji-6DI" id="afh-bu-04V"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VBY-gq-v8E" firstAttribute="top" secondItem="ecj-am-5Xp" secondAttribute="bottom" id="2fL-58-ra3"/>
+                            <constraint firstItem="ecj-am-5Xp" firstAttribute="leading" secondItem="XhR-oz-92f" secondAttribute="leading" id="j9U-AB-3jZ"/>
+                            <constraint firstAttribute="trailing" secondItem="ecj-am-5Xp" secondAttribute="trailing" id="q7s-Ws-ieI"/>
+                            <constraint firstItem="ecj-am-5Xp" firstAttribute="top" secondItem="XhR-oz-92f" secondAttribute="topMargin" id="z6W-Ql-7hL"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ICT-Mc-X36"/>
+                    <connections>
+                        <outlet property="tableView" destination="ecj-am-5Xp" id="4Jq-cr-m67"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fgb-4b-F1b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1788" y="358"/>
+            <point key="canvasLocation" x="1485" y="338"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CpB-K3-SXU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tUS-cJ-k4e" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lMS-O5-J9C">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2xI-yr-O5N" kind="relationship" relationship="rootViewController" id="9UF-CI-yDg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dmt-zv-UHp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="953" y="338"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
